使用 Colaboratory 建立

--- a/HW3/HW_3.ipynb
+++ b/HW3/HW_3.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wyY0yl1Jpf2o"
       },
@@ -48,11 +48,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "s7DVjxeq_-OF"
+        "id": "s7DVjxeq_-OF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8867c4ac-8888-44bc-9d23-fcd2e1eebedc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/usr/lib/python3.7/runpy.py:125: RuntimeWarning: 'nltk.downloader' found in sys.modules after import of package 'nltk', but prior to execution of 'nltk.downloader'; this may result in unpredictable behaviour\n",
+            "  warn(RuntimeWarning(msg))\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ]
+        }
+      ],
       "source": [
         "!python -m nltk.downloader punkt"
       ]
@@ -68,11 +83,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "qUdEHON5lybF"
+        "id": "qUdEHON5lybF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d241cf6-43a2-441c-ecf4-95a61c2bdcf4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.10.0+cu111\n"
+          ]
+        }
+      ],
       "source": [
         "print(torch.__version__)"
       ]
@@ -92,11 +119,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "mRy4VWrvkCP6"
+        "id": "mRy4VWrvkCP6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da2e5ccc-451f-4872-886e-f21830a8629e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running on cuda\n"
+          ]
+        }
+      ],
       "source": [
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "print(\"Running on {}\".format(device))"
@@ -128,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "vC5tWWn2mWhH"
       },
@@ -140,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "q_vLcPzzIxDw"
       },
@@ -151,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "sNb4H1auI4lA"
       },
@@ -170,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "SnIbufFHlYSx"
       },
@@ -234,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "392D8YLfI_K3"
       },
@@ -280,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "0YgU4027luO3"
       },
@@ -312,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "JYb1iVsqb0Le"
       },
@@ -325,11 +364,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "-FeYYf7-c01Z"
+        "id": "-FeYYf7-c01Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7f0d88bb-7c16-401d-864e-742490455ee5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at  ../torch/csrc/utils/tensor_new.cpp:201.)\n",
+            "  \"\"\"\n"
+          ]
+        }
+      ],
       "source": [
         "avg_trainX, avg_trainY=get_batches(avg_train_x, avg_train_y, xType=torch.FloatTensor)\n",
         "avg_devX, avg_devY=get_batches(avg_dev_x, avg_dev_y, xType=torch.FloatTensor)"
@@ -337,11 +389,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "Duzn0vCrdR5X"
+        "id": "Duzn0vCrdR5X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee883456-1381-457c-88cc-15d0437e9299"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0, dev accuracy: 0.649\n",
+            "Epoch 5, dev accuracy: 0.684\n",
+            "Epoch 10, dev accuracy: 0.702\n",
+            "Epoch 15, dev accuracy: 0.723\n",
+            "Epoch 20, dev accuracy: 0.728\n",
+            "Epoch 25, dev accuracy: 0.734\n",
+            "Epoch 30, dev accuracy: 0.737\n",
+            "Epoch 35, dev accuracy: 0.737\n",
+            "Epoch 40, dev accuracy: 0.739\n",
+            "Stopping training; no improvement on dev data after 10 epochs\n"
+          ]
+        }
+      ],
       "source": [
         "logreg=LogisticRegressionClassifier(50, len(labels)).to(device)\n",
         "optimizer = torch.optim.Adam(logreg.parameters(), lr=0.001, weight_decay=1e-5)\n",
@@ -394,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "0r3LM0mKDxVP"
       },
@@ -424,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "huWSY2FNlqrF"
       },
@@ -440,10 +513,14 @@
         "            label = cols[1]\n",
         "            review = cols[2]\n",
         "            bow=np.zeros(len(vocab))\n",
+        "            words = nltk.word_tokenize(review)\n",
+        "\n",
+        "            for word in words:\n",
+        "                word = word.lower()\n",
+        "                vocab[word]+=1\n",
         "\n",
         "            '''\n",
         "            Add your bow code here to store the featurization in the bow variable. \n",
-        "            \n",
         "            '''\n",
         "\n",
         "            data.append(bow)\n",
@@ -454,11 +531,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "tc9ZGJvWImkA"
+        "id": "tc9ZGJvWImkA",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 317
+        },
+        "outputId": "b8ac6d8c-9840-42ec-c627-24085a12a657"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-50a126eef056>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbow_vocab\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mget_vocab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingFile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbow_train_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_train_y\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread_bow_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mbow_dev_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_dev_y\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread_bow_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-21-0a29ec0bb929>\u001b[0m in \u001b[0;36mread_bow_data\u001b[0;34m(filename, vocab)\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m                 \u001b[0mvocab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m             '''\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'creepshow.by'"
+          ]
+        }
+      ],
       "source": [
         "bow_vocab=get_vocab(trainingFile)\n",
         "bow_train_x, bow_train_y=read_bow_data(trainingFile, bow_vocab)\n",
@@ -467,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "LFucMsZII8Hb"
       },
@@ -479,11 +574,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "byr4SJB1JCDO"
+        "id": "byr4SJB1JCDO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aba15297-eecf-46bd-807d-2a59cadd528f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0, dev accuracy: 0.500\n",
+            "Epoch 5, dev accuracy: 0.500\n",
+            "Stopping training; no improvement on dev data after 10 epochs\n",
+            "\n",
+            "Best Performing Model achieves dev accuracy of : 0.500\n"
+          ]
+        }
+      ],
       "source": [
         "logreg=LogisticRegressionClassifier(len(bow_vocab), len(labels)).to(device)\n",
         "optimizer = torch.optim.Adam(logreg.parameters(), lr=0.001, weight_decay=1e-5)\n",
@@ -805,6 +916,7 @@
       "collapsed_sections": [],
       "name": "HW_3.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
