使用 Colaboratory 建立

--- a/HW3/HW_3.ipynb
+++ b/HW3/HW_3.ipynb
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 32,
       "metadata": {
         "id": "huWSY2FNlqrF"
       },
@@ -517,7 +517,8 @@
         "\n",
         "            for word in words:\n",
         "                word = word.lower()\n",
-        "                vocab[word]+=1\n",
+        "                if word in vocab:\n",
+        "                  bow[vocab[word]] = 1\n",
         "\n",
         "            '''\n",
         "            Add your bow code here to store the featurization in the bow variable. \n",
@@ -531,29 +532,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 33,
       "metadata": {
-        "id": "tc9ZGJvWImkA",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 317
-        },
-        "outputId": "b8ac6d8c-9840-42ec-c627-24085a12a657"
+        "id": "tc9ZGJvWImkA"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-50a126eef056>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbow_vocab\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mget_vocab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingFile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbow_train_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_train_y\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread_bow_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mbow_dev_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_dev_y\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread_bow_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbow_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-21-0a29ec0bb929>\u001b[0m in \u001b[0;36mread_bow_data\u001b[0;34m(filename, vocab)\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m                 \u001b[0mvocab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m             '''\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'creepshow.by'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "bow_vocab=get_vocab(trainingFile)\n",
         "bow_train_x, bow_train_y=read_bow_data(trainingFile, bow_vocab)\n",
@@ -562,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 34,
       "metadata": {
         "id": "LFucMsZII8Hb"
       },
@@ -574,24 +557,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 35,
       "metadata": {
         "id": "byr4SJB1JCDO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aba15297-eecf-46bd-807d-2a59cadd528f"
+        "outputId": "9d89802d-3e76-4af6-8af3-59d4776a65c8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 0, dev accuracy: 0.500\n",
-            "Epoch 5, dev accuracy: 0.500\n",
+            "Epoch 0, dev accuracy: 0.841\n",
+            "Epoch 5, dev accuracy: 0.869\n",
+            "Epoch 10, dev accuracy: 0.863\n",
             "Stopping training; no improvement on dev data after 10 epochs\n",
             "\n",
-            "Best Performing Model achieves dev accuracy of : 0.500\n"
+            "Best Performing Model achieves dev accuracy of : 0.869\n"
           ]
         }
       ],
