使用 Colaboratory 建立

--- a/HW3/HW_3.ipynb
+++ b/HW3/HW_3.ipynb
@@ -633,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "9YhST7BOJPoG"
       },
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "9sB60ratJZvB"
       },
@@ -682,7 +682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "hStl2tmiJesV"
       },
@@ -694,7 +694,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "gZNvT-REJgv1"
       },
@@ -722,7 +722,7 @@
         "      '''\n",
         "      Initialize the following layers according to the hw spec\n",
         "      '''\n",
-        "      self.embeddings = ...\n",
+        "      self.embeddings = nn.pretrained_embeddings\n",
         "\n",
         "      # convolution over 1 word\n",
         "      self.conv_1 = ...\n",
