使用 Colaboratory 建立

--- a/HW3/HW_3.ipynb
+++ b/HW3/HW_3.ipynb
@@ -54,7 +54,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8867c4ac-8888-44bc-9d23-fcd2e1eebedc"
+        "outputId": "1f218a82-a6d8-48ca-855e-e4f15617ed76"
       },
       "outputs": [
         {
@@ -89,7 +89,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5d241cf6-43a2-441c-ecf4-95a61c2bdcf4"
+        "outputId": "491d7a67-9f9e-47a4-a064-41fafbefecda"
       },
       "outputs": [
         {
@@ -125,7 +125,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da2e5ccc-451f-4872-886e-f21830a8629e"
+        "outputId": "8f96c001-6f3b-4623-c17d-c8b8dcadfbb2"
       },
       "outputs": [
         {
@@ -370,7 +370,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f0d88bb-7c16-401d-864e-742490455ee5"
+        "outputId": "0e1763d8-93a3-4ead-c7c5-a04a58d10486"
       },
       "outputs": [
         {
@@ -395,7 +395,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee883456-1381-457c-88cc-15d0437e9299"
+        "outputId": "dccb889a-5cdf-44b6-b15b-b047cf9301dd"
       },
       "outputs": [
         {
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 16,
       "metadata": {
         "id": "huWSY2FNlqrF"
       },
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 17,
       "metadata": {
         "id": "tc9ZGJvWImkA"
       },
@@ -545,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 18,
       "metadata": {
         "id": "LFucMsZII8Hb"
       },
@@ -557,25 +557,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 19,
       "metadata": {
         "id": "byr4SJB1JCDO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d89802d-3e76-4af6-8af3-59d4776a65c8"
+        "outputId": "17ee5a66-3864-47de-9cd1-aa027bd4ce7a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 0, dev accuracy: 0.841\n",
-            "Epoch 5, dev accuracy: 0.869\n",
-            "Epoch 10, dev accuracy: 0.863\n",
+            "Epoch 0, dev accuracy: 0.844\n",
+            "Epoch 5, dev accuracy: 0.870\n",
+            "Epoch 10, dev accuracy: 0.859\n",
             "Stopping training; no improvement on dev data after 10 epochs\n",
             "\n",
-            "Best Performing Model achieves dev accuracy of : 0.869\n"
+            "Best Performing Model achieves dev accuracy of : 0.870\n"
           ]
         }
       ],
@@ -633,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 20,
       "metadata": {
         "id": "9YhST7BOJPoG"
       },
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 21,
       "metadata": {
         "id": "9sB60ratJZvB"
       },
@@ -682,7 +682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 22,
       "metadata": {
         "id": "hStl2tmiJesV"
       },
@@ -694,7 +694,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 23,
       "metadata": {
         "id": "gZNvT-REJgv1"
       },
@@ -722,18 +722,18 @@
         "      '''\n",
         "      Initialize the following layers according to the hw spec\n",
         "      '''\n",
-        "      self.embeddings = nn.pretrained_embeddings\n",
+        "      self.embeddings = nn.Embedding.from_pretrained(pretrained_embeddings)\n",
         "\n",
         "      # convolution over 1 word\n",
-        "      self.conv_1 = ...\n",
+        "      self.conv_1 = nn.Conv1d(50, 50, 1)\n",
         "\n",
         "      # convolution over 2 words    \n",
-        "      self.conv_2 = ...\n",
+        "      self.conv_2 = nn.Conv1d(50, 50, 2)\n",
         "        \n",
         "      # convolution over 3 words\n",
-        "      self.conv_3 = ...\n",
+        "      self.conv_3 = nn.Conv1d(50, 50, 3)\n",
         "        \n",
-        "      self.fc = ...\n",
+        "      self.fc = nn.Linear(torch.cat((x, x, x)), self.num_labels)\n",
         "\n",
         "    \n",
         "   def forward(self, input): \n",
