使用 Colaboratory 建立

--- a/HW3/HW_3.ipynb
+++ b/HW3/HW_3.ipynb
@@ -733,7 +733,7 @@
         "      # convolution over 3 words\n",
         "      self.conv_3 = nn.Conv1d(50, 50, 3)\n",
         "        \n",
-        "      self.fc = nn.Linear(torch.cat((x, x, x)), self.num_labels)\n",
+        "      self.fc = nn.Linear(3*50, self.num_labels)\n",
         "\n",
         "    \n",
         "   def forward(self, input): \n",
