--- a/HW3/HW_3.ipynb
+++ b/HW3/HW_3.ipynb
@@ -747,25 +747,25 @@
         "      '''\n",
         "\n",
         "      # Apply the one-word convolution, tanh, and max pool\n",
-        "      x1 = ...\n",
-        "      x1 = ...\n",
-        "      x1 = ...\n",
+        "      x1 = self.conv_1(x0)\n",
+        "      x1 = torch.tanh(x1)\n",
+        "      x1 = nn.MaxPool1d()\n",
         "\n",
         "      # Apply the two-word convolution, tanh, and max pool\n",
-        "      x2 = ...\n",
-        "      x2 = ...\n",
-        "      x2 = ...\n",
+        "      x2 = self.conv_2(x0)\n",
+        "      x2 = torch.tanh(x2)\n",
+        "      x2 = nn.MaxPool1d()\n",
         "\n",
         "      # Apply the three-word convolution, tanh, and max pool\n",
-        "      x3 = ...\n",
-        "      x3 = ...\n",
-        "      x3 = ...\n",
+        "      x3 = self.conv_3(x0)\n",
+        "      x3 = torch.tanh(x3)\n",
+        "      x3 = nn.MaxPool1d()\n",
         "\n",
         "      # Concatenates the output of all 3 convolution layers\n",
-        "      combined = ...\n",
+        "      combined = torch.cat((x1,x2,x3), 1)\n",
         "\n",
         "      # Connects the combined output to the fully-connected layer\n",
-        "      out = ...\n",
+        "      out = self.fc(combined)\n",
         "      return out.squeeze()\n",
         "\n",
         "\n",
