使用 Colaboratory 建立

--- a/HW4/HW_4.ipynb
+++ b/HW4/HW_4.ipynb
@@ -37,7 +37,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80c80a6a-5119-4df5-b485-24ae0d837c0d"
+        "outputId": "1860c43c-2639-4eaa-b383-44c883ab8fb1"
       },
       "outputs": [
         {
@@ -76,36 +76,36 @@
           "base_uri": "https://localhost:8080/",
           "height": 290,
           "referenced_widgets": [
-            "317adf8c38d54153b357c8c3bd6cfdf3",
-            "721f3b4dd610448aba08770bc84923cd",
-            "449246220908483693cc81421b3c2f6a",
-            "9f684ee2f99c438da520ee7319219d7c",
-            "2bab2309297d4eef94189ce69ac3e185",
-            "f6c4d65d25fd4732ab1666e91a796aee",
-            "ac3a630bbed5435780e67d0bc329715f",
-            "2b11ada8ca354b68b21c341d86f4d79d",
-            "a4e01b9372024ab2bb506fc8467b57fb",
-            "bcd2b9fa24de4319a6feaaeae6067377",
-            "bbf5b6c581624195820a520670226f2f"
+            "3274bb2c703a41dab105549eda51811e",
+            "9e2dc05c480d4ed49cffbc802fb9a6b5",
+            "4f66f2e7d43443f5bb12bde0a9f205a4",
+            "f236cd233dd64138a6bb4fde889f0ff1",
+            "0061aa84bb834d55aba072e4bf97136b",
+            "c2a6405e20824278810577bfc5bc6862",
+            "5064f42abb394b02bb74b67ef284b6ed",
+            "7d1aecb77d00455bbb8b4f77888848c4",
+            "92aefd8a16014f80a6833d23a160b51b",
+            "e0cb9f415aef40ba8e109b92173e13a5",
+            "79eeac63b4f74e6ba184a47d7867d712"
           ]
         },
-        "outputId": "0e7dd503-2cd2-48ce-f161-59e154112528"
+        "outputId": "5f57c62f-bfff-406c-ea56-161108a96bd7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-02-15 10:07:15--  https://raw.githubusercontent.com/dbamman/nlp22/main/HW4/plot_summaries.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "--2022-02-15 11:19:07--  https://raw.githubusercontent.com/dbamman/nlp22/main/HW4/plot_summaries.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 75934033 (72M) [text/plain]\n",
             "Saving to: ‘plot_summaries.txt’\n",
             "\n",
-            "plot_summaries.txt  100%[===================>]  72.42M   173MB/s    in 0.4s    \n",
+            "plot_summaries.txt  100%[===================>]  72.42M  88.2MB/s    in 0.8s    \n",
             "\n",
-            "2022-02-15 10:07:18 (173 MB/s) - ‘plot_summaries.txt’ saved [75934033/75934033]\n",
+            "2022-02-15 11:19:08 (88.2 MB/s) - ‘plot_summaries.txt’ saved [75934033/75934033]\n",
             "\n"
           ]
         },
@@ -113,7 +113,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "317adf8c38d54153b357c8c3bd6cfdf3",
+              "model_id": "3274bb2c703a41dab105549eda51811e",
               "version_minor": 0,
               "version_major": 2
             },
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZS4og6Yp2Avb",
-        "outputId": "25555ead-6330-4592-fcb1-fe526b33fe1a"
+        "outputId": "1a0daf40-2a7f-4165-f716-bc355b303521"
       },
       "outputs": [
         {
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "id": "0xJjoXN_F-s0"
       },
@@ -276,7 +276,6 @@
         "        assert len(text) >= self.n, f\"Expected at least {self.n} words; got {len(text)} words. \\nGiven text: {text}\"\n",
         "\n",
         "        # BEGIN SOLUTION\n",
-        "        \n",
         "        return (self.counts_n + self.smoothing)/(self.counts_n_1 + self.smoothing * len(self.vocab))\n",
         "        # END SOLUTION\n",
         "\n",
@@ -296,7 +295,11 @@
         "            - As a sanity check, you should make sure the probabilities you return add up to 1\n",
         "        \"\"\"\n",
         "        # BEGIN SOLUTION\n",
-        "        \n",
+        "        prob = []\n",
+        "        for i in text_prefix:\n",
+        "          prob.append(self.get_probability(self, i))\n",
+        "        print(sum(prob))\n",
+        "\n",
         "        # END SOLUTION"
       ]
     },
@@ -321,11 +324,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "Qz99lOhKEPgT"
+        "id": "Qz99lOhKEPgT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90e91c9f-073f-495f-a587-7da4fc88f237"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "unigram validation perplexity: None\n",
+            "bigram validation perplexity: None\n",
+            "trigram validation perplexity: None\n"
+          ]
+        }
+      ],
       "source": [
         "def get_perplexity(model, text):\n",
         "    \"\"\"Returns the perplexity of the model.\n",
@@ -720,7 +737,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "317adf8c38d54153b357c8c3bd6cfdf3": {
+        "3274bb2c703a41dab105549eda51811e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -733,16 +750,16 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_721f3b4dd610448aba08770bc84923cd",
+            "layout": "IPY_MODEL_9e2dc05c480d4ed49cffbc802fb9a6b5",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_449246220908483693cc81421b3c2f6a",
-              "IPY_MODEL_9f684ee2f99c438da520ee7319219d7c",
-              "IPY_MODEL_2bab2309297d4eef94189ce69ac3e185"
+              "IPY_MODEL_4f66f2e7d43443f5bb12bde0a9f205a4",
+              "IPY_MODEL_f236cd233dd64138a6bb4fde889f0ff1",
+              "IPY_MODEL_0061aa84bb834d55aba072e4bf97136b"
             ]
           }
         },
-        "721f3b4dd610448aba08770bc84923cd": {
+        "9e2dc05c480d4ed49cffbc802fb9a6b5": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -794,13 +811,13 @@
             "left": null
           }
         },
-        "449246220908483693cc81421b3c2f6a": {
+        "4f66f2e7d43443f5bb12bde0a9f205a4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_f6c4d65d25fd4732ab1666e91a796aee",
+            "style": "IPY_MODEL_c2a6405e20824278810577bfc5bc6862",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
@@ -812,16 +829,16 @@
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_ac3a630bbed5435780e67d0bc329715f"
+            "layout": "IPY_MODEL_5064f42abb394b02bb74b67ef284b6ed"
           }
         },
-        "9f684ee2f99c438da520ee7319219d7c": {
+        "f236cd233dd64138a6bb4fde889f0ff1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_2b11ada8ca354b68b21c341d86f4d79d",
+            "style": "IPY_MODEL_7d1aecb77d00455bbb8b4f77888848c4",
             "_dom_classes": [],
             "description": "",
             "_model_name": "FloatProgressModel",
@@ -836,31 +853,31 @@
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_a4e01b9372024ab2bb506fc8467b57fb"
+            "layout": "IPY_MODEL_92aefd8a16014f80a6833d23a160b51b"
           }
         },
-        "2bab2309297d4eef94189ce69ac3e185": {
+        "0061aa84bb834d55aba072e4bf97136b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_bcd2b9fa24de4319a6feaaeae6067377",
+            "style": "IPY_MODEL_e0cb9f415aef40ba8e109b92173e13a5",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 42303/42303 [01:35&lt;00:00, 450.80it/s]",
+            "value": " 42303/42303 [02:26&lt;00:00, 333.76it/s]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_bbf5b6c581624195820a520670226f2f"
+            "layout": "IPY_MODEL_79eeac63b4f74e6ba184a47d7867d712"
           }
         },
-        "f6c4d65d25fd4732ab1666e91a796aee": {
+        "c2a6405e20824278810577bfc5bc6862": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -875,7 +892,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "ac3a630bbed5435780e67d0bc329715f": {
+        "5064f42abb394b02bb74b67ef284b6ed": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -927,7 +944,7 @@
             "left": null
           }
         },
-        "2b11ada8ca354b68b21c341d86f4d79d": {
+        "7d1aecb77d00455bbb8b4f77888848c4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -943,7 +960,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "a4e01b9372024ab2bb506fc8467b57fb": {
+        "92aefd8a16014f80a6833d23a160b51b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -995,7 +1012,7 @@
             "left": null
           }
         },
-        "bcd2b9fa24de4319a6feaaeae6067377": {
+        "e0cb9f415aef40ba8e109b92173e13a5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1010,7 +1027,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "bbf5b6c581624195820a520670226f2f": {
+        "79eeac63b4f74e6ba184a47d7867d712": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
