使用 Colaboratory 建立

--- a/HW4/HW_4.ipynb
+++ b/HW4/HW_4.ipynb
@@ -295,10 +295,11 @@
         "            - As a sanity check, you should make sure the probabilities you return add up to 1\n",
         "        \"\"\"\n",
         "        # BEGIN SOLUTION\n",
-        "        prob = []\n",
-        "        for i in text_prefix:\n",
-        "          prob.append(self.get_probability(self, i))\n",
-        "        print(sum(prob))\n",
+        "        while len(text_prefix) < self.n - 1:\n",
+        "            text_prefix = [\"<eos>\"] + text_prefix\n",
+        "        if len(text_prefix) > self.n - 1:\n",
+        "            text_prefix = text_prefix[len(text_prefix) - self.n + 1 :]\n",
+        "        return get_probability(self, text_prefix)\n",
         "\n",
         "        # END SOLUTION"
       ]
