使用 Colaboratory 建立

--- a/HW4/HW_4.ipynb
+++ b/HW4/HW_4.ipynb
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "metadata": {
         "id": "0xJjoXN_F-s0"
       },
@@ -299,7 +299,7 @@
         "            text_prefix = [\"<eos>\"] + text_prefix\n",
         "        if len(text_prefix) > self.n - 1:\n",
         "            text_prefix = text_prefix[len(text_prefix) - self.n + 1 :]\n",
-        "        return get_probability(self, text_prefix)\n",
+        "        return self.get_probability(text_prefix)\n",
         "\n",
         "        # END SOLUTION"
       ]
@@ -358,6 +358,7 @@
         "        - you want to get the probability of each increasing sequence of words\n",
         "    \"\"\"\n",
         "    # BEGIN SOLUTION\n",
+        "    \n",
         "    \n",
         "    # END SOLUTION\n",
         "\n",
